maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: '(' expected but identifier found.
    if isDirectionFree(Direction.NORTH) {
       ^Escaper:8: error: illegal start of simple expression
  }
  ^Escaper:47: error: ':' expected but ')' found.
def isDirectionFree(dir) {
                       ^Escaper:55: error: identifier expected but '}' found.
}
^